ubuntu-dev-tools (0.131) UNRELEASED; urgency=low

  [ Stefano Rivera ]
  * doc/requestsync.1: Correct default value for REQUESTSYNC_SMTP_SERVER
    (LP: #844992)
  * import-bug-from-debian: Bugs are filed against source packages in Ubuntu.
    (LP: #844734)
  * Debian source publication records are all Published now, not pending
    (LP: #845487)

  [ Colin Watson ]
  * syncpackage: Fix typo.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 08 Sep 2011 23:13:05 +0200

ubuntu-dev-tools (0.130) unstable; urgency=low

  * pull-lp-source: Support source packages with a bad version string
    (LP: #844682).
  * backportpackage:
    - Search for newer versions in -{updates,security} on Ubuntu (LP: #823833).
    - Use Ubuntu and Debian as fall back check in codename_to_distribution to
      allow backporting to Ubuntu from a Debian system (LP: #823832).

 -- Benjamin Drung <bdrung@debian.org>  Thu, 08 Sep 2011 22:04:11 +0200

ubuntu-dev-tools (0.129) unstable; urgency=low

  [ Colin Watson ]
  * syncpackage: Convert to new LP API, with --no-lp available for the old
    style of operation.
  * syncpackage: Require -f/--force option to overwrite Ubuntu changes.

  [ Jelmer Vernooij ]
  * Remove several tools not specific to Ubuntu that have been migrated to
    lptools (LP: #708886):
   - get-branches (renamed to lp-get-branches)
   - grab-attachments (renamed to lp-grab-attachments)
   - lp-project-upload
   - lp-list-bugs
   - lp-set-dup
   - lp-shell

  [ Stefano Rivera ]
  * syncpackage: Show changes to be synced when performing native syncs.
  * syncpackage: Check the sync blacklist.
  * syncpackage: Support --bug (extra bugs to be closed by the sync) with
    native syncs. (Bugs are closed one individually, via the API, post-sync)
  * dgetlp, submittodebian, 404main: Use unicode strings for literal strings
    containing non-ASCII characters (LP: #836661)
  * Recommend pbuilder | aptitude for get-build-deps, and exit with an error